Rollout of Navigation (help promote Telegram group as well as future Letters section. Improve scalability, including adding more spacing and fixing scaling for smaller screen devices like iPhone 4.

--- a/src/less/core.less
+++ b/src/less/core.less
@@ -1,7 +1,9 @@
 // This file contains the appropriate values used across the LESS
 
 @primary : #195f5f;
-@secondary : lighten(@primary, 5%);
+@secondary : lighten(@primary, 2.5%);
+@darkBlue: darken(@primary, 1.5%);
+
 @link : #004f83;
 @red : lighten(red, 10%); // Prettier red
 @black : #333333; // Use a calmer dark color
